# SimpleSlicer

./: CMakeLists.txt  README.md  main.cpp  mesh.cpp  mesh.hpp  slices.cpp  slices.hpp
src/: bounds.hpp  main.cpp  mesh.cpp  mesh.hpp  polygon.cpp  polygon.hpp  polygons.cpp  polygons.hpp  polypath.cpp  polypath.hpp  renderer.cpp  renderer.hpp  slices.cpp  slices.hpp  vertex.hpp
